# bera-reth

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Dockerfile.debug  Makefile  README.md  deny.toml  dprint.json
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml  docker-git.yml  docker-nightly.yml  docker.yml  release.yml
docs/: release.md
scripts/: setup-gpg.sh  test-block-progression.sh  test-build-targets.sh
src/: lib.rs  main.rs
src/chainspec/: mod.rs
src/consensus/: mod.rs
src/engine/: builder.rs  mod.rs  payload.rs  rpc.rs  validator.rs
src/genesis/: mod.rs
src/hardforks/: mod.rs
src/node/: cli.rs  mod.rs
src/node/evm/: assembler.rs  block_context.rs  config.rs  error.rs  executor.rs  mod.rs  receipt.rs
src/pool/: mod.rs  transaction.rs
src/primitives/: header.rs  mod.rs
src/rpc/: api.rs  mod.rs  receipt.rs
src/transaction/: mod.rs  pol.rs  txtype.rs
tests/: e2e_integration.rs
tests/e2e/: mod.rs  transaction_tests.rs
