[package]
name = "bera-reth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-consensus = "1.0.9"
alloy-eips = "1.0.9"
alloy-genesis = "1.0.9"
alloy-primitives = "1.0.9"
alloy-rpc-types = "1.0.9"
clap = { version = "4.5.39", features = ["derive"] }
derive_more = "2.0.1"
eyre = "0.6"
jsonrpsee-core = "0.25.1"
reth = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-chainspec = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-cli = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-cli-commands = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-cli-util = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-db = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-ethereum-cli = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-evm = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-evm-ethereum = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-network-peers = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-node-builder = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-node-ethereum = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
reth-tracing = { git = "https://github.com/berachain/reth", branch = "prague1-berachain-reth" }
serde = { version = "1.0", features = ["derive"], default-features = false }
thiserror = "2.0"
tracing = "0.1.41"

[features]
default = ["jemalloc"]
jemalloc = ["reth/jemalloc"]
asm-keccak = ["reth/asm-keccak"]
min-debug-logs = ["reth/min-debug-logs"]

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[patch.crates-io]
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "08fa016ed950b6e65f810fc9cdef7cf38fbc63f6" }
